--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,19 +2,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.tylorlilley.talismanrandomizer.MainActivity">
-   <item
-       android:id="@+id/action_randomizer"
-       android:orderInCategory="100"
-       android:title="@string/action_randomizer"
-       app:showAsAction="never" />
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="200"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-   <item
-       android:id="@+id/action_about"
-       android:orderInCategory="300"
-       android:title="@string/action_about"
-       app:showAsAction="never" />
-</menu>
+        <item
+           android:id="@+id/action_randomizer"
+           android:orderInCategory="100"
+           android:title="@string/action_randomizer"
+           app:showAsAction="never" />
+       <item
+           android:id="@+id/action_settings"
+           android:orderInCategory="200"
+           android:title="@string/action_settings" />
+       <item
+           android:id="@+id/action_customize"
+           android:orderInCategory="300"
+           android:title="@string/action_customize" />
+       <item
+           android:id="@+id/action_about"
+           android:orderInCategory="400"
+           android:title="@string/action_about"
+           app:showAsAction="never" />
+   </menu>
