--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C22939</color>
-    <color name="colorPrimaryDark">#5B0B0C</color>
-    <color name="colorAccent">#72C3D6</color>
+    <color name="colorPrimary">#c22939</color>
+    <color name="colorPrimaryDark">#5b0b0c</color>
+    <color name="colorAccent">#72c3d6</color>
+    <color name="colorAccentDark">#163959</color>
+    <color name="whiteTextColor">#f5f5f5</color>
 </resources>
